--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
  html {
   font-family: sans-serif;
 }
+
+table {
+  border-collapse: collapse;
+  border: 2px solid rgb(200,200,200);
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+}
+
+td {
+  border: 1px solid rgb(190,190,190);
+  padding: 10px 20px;
+  text-align: center;
+}
+
+thead td {
+    background-color: rgb(245,245,245);
+  }
+
+tbody td {
+  background-color: rgb(255, 255, 255);
+}
+
+caption {
+  padding: 10px;
+} 
